force-app/main/default/objects/GPMS_Service_Combine_History__c/GPMS_Service_Combine_History__c.object-meta.xml
<CustomObject>
    <description>Service Combine History</description>
    <label>Service Combine History</label>
    <nameField>
        <displayFormat>SCO-{00000000}</displayFormat>
        <label>Service Combine History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Combine History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>