force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/CheckBoxIfActing__c.field-meta.xml
<CustomField>
    <fullName>CheckBoxIfActing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check box if Acting</label>
    <type>Checkbox</type>
</CustomField>