force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/DateOfReceiptOfFurtherInformation__c.field-meta.xml
<CustomField>
    <fullName>DateOfReceiptOfFurtherInformation__c</fullName>
    <label>Date of Receipt of Further Information</label>
    <type>Date</type>
</CustomField>