force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/DateOfRequest__c.field-meta.xml
<CustomField>
    <fullName>DateOfRequest__c</fullName>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>