force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/DateRequired__c.field-meta.xml
<CustomField>
    <fullName>DateRequired__c</fullName>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>