force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/DelegateName__c.field-meta.xml
<CustomField>
    <fullName>DelegateName__c</fullName>
    <label>Delegate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>