force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/DelegatePosition__c.field-meta.xml
<CustomField>
    <fullName>DelegatePosition__c</fullName>
    <label>Delegate Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>All_delegate_positions_in_GPMS</valueSetName>
    </valueSet>
</CustomField>