force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Service Combine History</relationshipLabel>
    <relationshipName>Service_Combine_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>