force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/LinkToDocuments__c.field-meta.xml
<CustomField>
    <fullName>LinkToDocuments__c</fullName>
    <label>Link to Documents</label>
    <type>TextArea</type>
</CustomField>