force-app/main/default/objects/GPMS_Service_Combine_History__c/fields/SummaryOfRequest__c.field-meta.xml
<CustomField>
    <fullName>SummaryOfRequest__c</fullName>
    <label>Summary of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>