force-app/main/default/objects/GPMS_Service_Combine_History__c/recordTypes/Cancel_SC.recordType-meta.xml
<RecordType>
    <fullName>Cancel_SC</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>