force-app/main/default/objects/GPMS_Service_Combine_History__c/recordTypes/Record_Decision_SC.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_SC</fullName>
    <active>true</active>
    <label>Record Decision</label>
</RecordType>