force-app/main/default/objects/GPMS_Service_Combine_History__c/recordTypes/Record_Receipt_for_Further_Information_SC.recordType-meta.xml
<RecordType>
    <fullName>Record_Receipt_for_Further_Information_SC</fullName>
    <active>true</active>
    <label>Record Receipt for Further Information</label>
</RecordType>