force-app/main/default/objects/GPMS_Service_Combine_History__c/recordTypes/Submit_Application_SC.recordType-meta.xml
<RecordType>
    <fullName>Submit_Application_SC</fullName>
    <active>true</active>
    <description>System Admin Submit Application</description>
    <label>Submit Application</label>
</RecordType>