force-app/main/default/objects/GPMS_Service_Combine_History__c/recordTypes/Withdraw_SC.recordType-meta.xml
<RecordType>
    <fullName>Withdraw_SC</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>